--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,19 @@
-pandas==2.3.0
+pandas==2.3.1
 numpy==2.3.1
 plotly==6.1.2
 plotly-express==0.4.1
 streamlit==1.46.0
-yfinance==0.2.63
+yfinance==0.2.65
 tensorflow==2.20.0rc0
 feedparser==6.0.11
-transformers==4.53.2
+transformers==4.37.2
 stable-baselines3==2.7.0
-torch== 2.6
+torch==2.7.1
+gymnasium==1.2.0
+ta==0.11.0
+tqdm==4.67.1
+regex==2024.11.6
+lxml==6.0.0
+keras==3.10.0
+seaborn==0.13.2
+tensorboard==2.19.0
